--- a/streamlined_upgrades/gamedata/configs/items/items/items_upgrades_simple.ltx
+++ b/streamlined_upgrades/gamedata/configs/items/items/items_upgrades_simple.ltx
@@ -1,17 +1,18 @@
 [tch_upgr_new]
-use1_functor                = kit_binder.try_combine
-use1_action_functor         = kit_binder.combine
-use1_containers  						= actor_bag
-use2_functor                = kit_binder.try_downgrade
-use2_action_functor                = kit_binder.downgrade
-use2_containers  						= actor_bag
+icons_texture                       = ui\streamlined_icons
+use1_functor                        = kit_binder.try_combine
+use1_action_functor                 = kit_binder.combine
+use1_containers  			        = actor_bag
+use2_functor                        = kit_binder.try_downgrade
+use2_action_functor                 = kit_binder.downgrade
+use2_containers  					= actor_bag
 [upgr_o_1_physical]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_o_1.ogf
 description							= st_upgr_o_physical_desc
 inv_name							= st_upgr_o_physical
 inv_name_short						= st_upgr_o_physical
-inv_grid_x         					= 128
-inv_grid_y         					= 3
+inv_grid_x         					= 0
+inv_grid_y         					= 4
 cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_o_2_physical
@@ -20,15 +21,15 @@ tier = 3
 
 [upgr_o_2_physical]:tch_upgr_new,upgr_o_1_physical
 visual								= dynamics\upgrade\upgr_o_2.ogf
-inv_grid_x         					= 130
-inv_grid_y         					= 3
+inv_grid_x         					= 2
+inv_grid_y         					= 4
 cost								= 5900
 upgrade                             = upgr_o_3_physical
 downgrade                           = upgr_o_1_physical
 [upgr_o_3_physical]:tch_upgr_new,upgr_o_1_physical
 visual								= dynamics\upgrade\upgr_o_3.ogf
-inv_grid_x         					= 132
-inv_grid_y         					= 3
+inv_grid_x         					= 4
+inv_grid_y         					= 4
 cost								= 9500
 downgrade                           = upgr_o_2_physical
 
@@ -37,8 +38,8 @@ visual								= dynamics\upgrade\upgr_o_1.ogf
 description							= st_upgr_o_magical_desc
 inv_name							= st_upgr_o_magical
 inv_name_short						= st_upgr_o_magical
-inv_grid_x         					= 128
-inv_grid_y         					= 9
+inv_grid_x         					= 0
+inv_grid_y         					= 3
 cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_o_2_magical
@@ -47,15 +48,15 @@ tier = 3
 
 [upgr_o_2_magical]:tch_upgr_new,upgr_o_1_magical
 visual								= dynamics\upgrade\upgr_o_2.ogf
-inv_grid_x         					= 130
-inv_grid_y         					= 9
+inv_grid_x         					= 2
+inv_grid_y         					= 3
 cost								= 6900
 upgrade                             = upgr_o_3_magical
 downgrade                           = upgr_o_1_magical
 [upgr_o_3_magical]:tch_upgr_new,upgr_o_1_magical
 visual								= dynamics\upgrade\upgr_o_3.ogf
-inv_grid_x         					= 132
-inv_grid_y         					= 9
+inv_grid_x         					= 4
+inv_grid_y         					= 3
 cost								= 8500
 downgrade                           = upgr_o_2_magical
 
@@ -64,8 +65,8 @@ visual								= dynamics\upgrade\upgr_o_1.ogf
 description							= st_upgr_o_utility_desc
 inv_name							= st_upgr_o_utility
 inv_name_short						= st_upgr_o_utility
-inv_grid_x         					= 128
-inv_grid_y         					= 13
+inv_grid_x         					= 0
+inv_grid_y         					= 5
 cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_o_2_utility
@@ -74,15 +75,15 @@ tier = 3
 
 [upgr_o_2_utility]:tch_upgr_new,upgr_o_1_utility
 visual								= dynamics\upgrade\upgr_o_2.ogf
-inv_grid_x         					= 130
-inv_grid_y         					= 13
+inv_grid_x         					= 2
+inv_grid_y         					= 5
 cost								= 6900
 upgrade                             = upgr_o_3_utility
 downgrade                           = upgr_o_1_utility
 [upgr_o_3_utility]:tch_upgr_new,upgr_o_1_utility
 visual								= dynamics\upgrade\upgr_o_3.ogf
-inv_grid_x         					= 132
-inv_grid_y         					= 13
+inv_grid_x         					= 4
+inv_grid_y         					= 5
 cost								= 9500
 downgrade                           = upgr_o_2_utility
 
@@ -91,8 +92,8 @@ visual								= dynamics\upgrade\upgr_w_1.ogf
 description							= st_upgr_w_internal_desc
 inv_name							= st_upgr_w_internal
 inv_name_short						= st_upgr_w_internal
-inv_grid_x         					= 122
-inv_grid_y         					= 14
+inv_grid_x         					= 0
+inv_grid_y         					= 0
 cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_w_2_internal
@@ -101,15 +102,15 @@ tier = 3
 
 [upgr_w_2_internal]:tch_upgr_new,upgr_w_1_internal
 visual								= dynamics\upgrade\upgr_w_2.ogf
-inv_grid_x         					= 124
-inv_grid_y         					= 14
+inv_grid_x         					= 2
+inv_grid_y         					= 0
 cost								= 6900
 downgrade                           = upgr_w_1_internal
 upgrade                             = upgr_w_3_internal
 [upgr_w_3_internal]:tch_upgr_new,upgr_w_1_internal
 visual								= dynamics\upgrade\upgr_w_3.ogf
-inv_grid_x         					= 126
-inv_grid_y         					= 14
+inv_grid_x         					= 4
+inv_grid_y         					= 0
 cost								= 9500
 downgrade                           = upgr_w_2_internal
 
@@ -118,8 +119,8 @@ visual								= dynamics\upgrade\upgr_w_1.ogf
 description							= st_upgr_w_external_desc
 inv_name							= st_upgr_w_external
 inv_name_short						= st_upgr_w_external
-inv_grid_x         					= 122
-inv_grid_y         					= 2
+inv_grid_x         					= 0
+inv_grid_y         					= 1
 cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_w_3_external
@@ -128,15 +129,15 @@ tier = 3
 
 [upgr_w_2_external]:tch_upgr_new,upgr_w_1_external
 visual								= dynamics\upgrade\upgr_w_2.ogf
-inv_grid_x         					= 124
-inv_grid_y         					= 2
+inv_grid_x         					= 2
+inv_grid_y         					= 1
 cost								= 6900
 downgrade                           = upgr_w_1_external
 upgrade                             = upgr_w_3_external
 [upgr_w_3_external]:tch_upgr_new,upgr_w_1_external
 visual								= dynamics\upgrade\upgr_w_3.ogf
-inv_grid_x         					= 126
-inv_grid_y         					= 2
+inv_grid_x         					= 4
+inv_grid_y         					= 1
 cost								= 9500
 downgrade                           = upgr_w_1_external
 
@@ -145,8 +146,8 @@ visual								= dynamics\upgrade\upgr_w_1.ogf
 description							= st_upgr_w_optical_desc
 inv_name							= st_upgr_w_optical
 inv_name_short						= st_upgr_w_optical
-inv_grid_x         					= 122
-inv_grid_y         					= 8
+inv_grid_x         					= 0
+inv_grid_y         					= 2
 cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_w_2_optical
@@ -155,14 +156,14 @@ tier = 3
 
 [upgr_w_2_optical]:tch_upgr_new,upgr_w_1_optical
 visual								= dynamics\upgrade\upgr_w_2.ogf
-inv_grid_x         					= 124
-inv_grid_y         					= 8
+inv_grid_x         					= 2
+inv_grid_y         					= 2
 cost								= 6900
 downgrade                           = upgr_w_1_optical
 upgrade                             = upgr_w_3_optical
 [upgr_w_3_optical]:tch_upgr_new,upgr_w_1_optical
 visual								= dynamics\upgrade\upgr_w_3.ogf
-inv_grid_x         					= 126
-inv_grid_y         					= 8
+inv_grid_x         					= 4
+inv_grid_y         					= 2
 cost								= 9500
 downgrade                           = upgr_w_2_optical
