workshop autoinject update, ammo maker update

--- a/ammo maker/gamedata/configs/items/ammo/ammo_vanilla.ltx
+++ b/ammo maker/gamedata/configs/items/ammo/ammo_vanilla.ltx
@@ -1,4 +1,4 @@
-[custom_ammo_recipes]
+[ammo_vanilla]
 ammo_9x18_ap = 5, recipe_ammo_0, casing_p,1,powder_1,3,bullet_pistol_ap,1
 ammo_9x18_fmj = 5, recipe_ammo_0, casing_p,1,powder_1,1,bullet_pistol,1
 ammo_9x18_pmm = 5, recipe_ammo_0, casing_p,1,powder_1,2,bullet_pistol,1
