--- a/ammo maker/README
+++ b/ammo maker/README
@@ -6,5 +6,6 @@ Disassembly now yields variable amounts of components. Good ammo yields more com
 
 Changelog
 
+1.3 - Support for BAS ammo and generic ammo from other addons
 1.2 - New icons courtesy of Maid
 1.1 - Parts are always spawned in actor inventory (spawn in box has issues). Used less efficient and more consistent formula for spawning ammo.
