--- a/streamlined_upgrades/README
+++ b/streamlined_upgrades/README
@@ -62,6 +62,7 @@ Higher tier kits (Advanced/Fine tuning) can be obtained by combining three of th
 
 Kit drops
 These new kits spawn wherever the old ones spawn, randomly replacing them with a percentage chance. This chance can be tweaked in the MCM menu.
+Please note that the replacement is not perfect. You may occasionally see upgrade kits blink out of existence.
 
 Compatibility:
 Modifies:
