new icons, dependency update, and bas ammo fix

--- a/ammo maker/gamedata/configs/items/items/items_ammo_parts.ltx
+++ b/ammo maker/gamedata/configs/items/items/items_ammo_parts.ltx
@@ -55,24 +55,25 @@ box_size                    = 10
 inv_name		= st_powder_pistol
 inv_name_short	= st_powder_pistol
 description		= st_powder_pistol_desc
-inv_grid_x			                                   = 0
-inv_grid_y			                                   = 4
+inv_grid_x			                                   = 4
+inv_grid_y			                                   = 0
+inv_grid_height                                        = 2
 
 [powder_2]:weapon_ammo_parts
 inv_name		= st_powder_rifle
 inv_name_short	= st_powder_rifle
 description		= st_powder_rifle_desc
-inv_grid_x			                                   = 0
-inv_grid_y			                                   = 4
-1icon_layer        	                               = tch_meal_1_ico
+inv_grid_x			                                   = 3
+inv_grid_y			                                   = 2
+inv_grid_height                                        = 2
 
 [powder_3]:weapon_ammo_parts
 inv_name		= st_powder_mag
 inv_name_short	= st_powder_mag
 description		= st_powder_mag_desc
-inv_grid_x			                                   = 0
-inv_grid_y			                                   = 4
-1icon_layer        	                               = tch_meal_2_ico
+inv_grid_x			                                   = 3
+inv_grid_y			                                   = 0
+inv_grid_height                                        = 2
 
 [bullet_pistol]:weapon_ammo_parts
 inv_name		= st_handgun_rounds
