--- a/streamlined_upgrades/gamedata/configs/items/items/items_upgrades_simple.ltx
+++ b/streamlined_upgrades/gamedata/configs/items/items/items_upgrades_simple.ltx
@@ -6,6 +6,9 @@ use1_containers  			        = actor_bag
 use2_functor                        = kit_binder.try_downgrade
 use2_action_functor                 = kit_binder.downgrade
 use2_containers  					= actor_bag
+inv_weight							= 3
+tier = 3
+
 [upgr_o_1_physical]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_o_1.ogf
 description							= st_upgr_o_physical_desc
@@ -16,18 +19,21 @@ inv_grid_y         					= 4
 cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_o_2_physical
-
-tier = 3
-
-[upgr_o_2_physical]:tch_upgr_new,upgr_o_1_physical
+[upgr_o_2_physical]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_o_2.ogf
+description							= st_upgr_o_physical_desc
+inv_name							= st_upgr_o_physical
+inv_name_short						= st_upgr_o_physical
 inv_grid_x         					= 2
 inv_grid_y         					= 4
 cost								= 5900
 upgrade                             = upgr_o_3_physical
 downgrade                           = upgr_o_1_physical
-[upgr_o_3_physical]:tch_upgr_new,upgr_o_1_physical
+[upgr_o_3_physical]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_o_3.ogf
+description							= st_upgr_o_physical_desc
+inv_name							= st_upgr_o_physical
+inv_name_short						= st_upgr_o_physical
 inv_grid_x         					= 4
 inv_grid_y         					= 4
 cost								= 9500
@@ -44,17 +50,21 @@ cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_o_2_magical
 
-tier = 3
-
-[upgr_o_2_magical]:tch_upgr_new,upgr_o_1_magical
+[upgr_o_2_magical]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_o_2.ogf
+description							= st_upgr_o_magical_desc
+inv_name							= st_upgr_o_magical
+inv_name_short						= st_upgr_o_magical
 inv_grid_x         					= 2
 inv_grid_y         					= 3
 cost								= 6900
 upgrade                             = upgr_o_3_magical
 downgrade                           = upgr_o_1_magical
-[upgr_o_3_magical]:tch_upgr_new,upgr_o_1_magical
+[upgr_o_3_magical]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_o_3.ogf
+description							= st_upgr_o_magical_desc
+inv_name							= st_upgr_o_magical
+inv_name_short						= st_upgr_o_magical
 inv_grid_x         					= 4
 inv_grid_y         					= 3
 cost								= 8500
@@ -70,18 +80,21 @@ inv_grid_y         					= 5
 cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_o_2_utility
-
-tier = 3
-
-[upgr_o_2_utility]:tch_upgr_new,upgr_o_1_utility
+[upgr_o_2_utility]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_o_2.ogf
+description							= st_upgr_o_utility_desc
+inv_name							= st_upgr_o_utility
+inv_name_short						= st_upgr_o_utility
 inv_grid_x         					= 2
 inv_grid_y         					= 5
 cost								= 6900
 upgrade                             = upgr_o_3_utility
 downgrade                           = upgr_o_1_utility
-[upgr_o_3_utility]:tch_upgr_new,upgr_o_1_utility
+[upgr_o_3_utility]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_o_3.ogf
+description							= st_upgr_o_utility_desc
+inv_name							= st_upgr_o_utility
+inv_name_short						= st_upgr_o_utility
 inv_grid_x         					= 4
 inv_grid_y         					= 5
 cost								= 9500
@@ -97,18 +110,21 @@ inv_grid_y         					= 0
 cost								= 2750
 inv_weight							= 3
 upgrade                             = upgr_w_2_internal
-
-tier = 3
-
-[upgr_w_2_internal]:tch_upgr_new,upgr_w_1_internal
+[upgr_w_2_internal]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_w_2.ogf
+description							= st_upgr_w_internal_desc
+inv_name							= st_upgr_w_internal
+inv_name_short						= st_upgr_w_internal
 inv_grid_x         					= 2
 inv_grid_y         					= 0
 cost								= 6900
 downgrade                           = upgr_w_1_internal
 upgrade                             = upgr_w_3_internal
-[upgr_w_3_internal]:tch_upgr_new,upgr_w_1_internal
+[upgr_w_3_internal]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_w_3.ogf
+description							= st_upgr_w_internal_desc
+inv_name							= st_upgr_w_internal
+inv_name_short						= st_upgr_w_internal
 inv_grid_x         					= 4
 inv_grid_y         					= 0
 cost								= 9500
@@ -123,23 +139,29 @@ inv_grid_x         					= 0
 inv_grid_y         					= 1
 cost								= 2750
 inv_weight							= 3
-upgrade                             = upgr_w_3_external
+upgrade                             = upgr_w_2_external
 
 tier = 3
 
-[upgr_w_2_external]:tch_upgr_new,upgr_w_1_external
+[upgr_w_2_external]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_w_2.ogf
+description							= st_upgr_w_external_desc
+inv_name							= st_upgr_w_external
+inv_name_short						= st_upgr_w_external
 inv_grid_x         					= 2
 inv_grid_y         					= 1
 cost								= 6900
 downgrade                           = upgr_w_1_external
 upgrade                             = upgr_w_3_external
-[upgr_w_3_external]:tch_upgr_new,upgr_w_1_external
+[upgr_w_3_external]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_w_3.ogf
+description							= st_upgr_w_external_desc
+inv_name							= st_upgr_w_external
+inv_name_short						= st_upgr_w_external
 inv_grid_x         					= 4
 inv_grid_y         					= 1
 cost								= 9500
-downgrade                           = upgr_w_1_external
+downgrade                           = upgr_w_2_external
 
 [upgr_w_1_optical]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_w_1.ogf
@@ -154,15 +176,21 @@ upgrade                             = upgr_w_2_optical
 
 tier = 3
 
-[upgr_w_2_optical]:tch_upgr_new,upgr_w_1_optical
+[upgr_w_2_optical]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_w_2.ogf
+description							= st_upgr_w_optical_desc
+inv_name							= st_upgr_w_optical
+inv_name_short						= st_upgr_w_optical
 inv_grid_x         					= 2
 inv_grid_y         					= 2
 cost								= 6900
 downgrade                           = upgr_w_1_optical
 upgrade                             = upgr_w_3_optical
-[upgr_w_3_optical]:tch_upgr_new,upgr_w_1_optical
+[upgr_w_3_optical]:tch_upgr_new,tch_upgr
 visual								= dynamics\upgrade\upgr_w_3.ogf
+description							= st_upgr_w_optical_desc
+inv_name							= st_upgr_w_optical
+inv_name_short						= st_upgr_w_optical
 inv_grid_x         					= 4
 inv_grid_y         					= 2
 cost								= 9500
