--- a/README
+++ b/README
@@ -18,4 +18,8 @@ OUTFIT CHANCE TO DROP:
 
 The beloved balanced drops addon, now part of the family. Customizable drop chances for outfits and helmets.
 
+ITEM SAVES:
+
+Adds items to save your game, earned by completing tasks and through crafting.
+
 All RUS translations courtesy of Aonestr
