remove debug mcm...thing, ammo maker salvage chance config driven

--- a/ammo maker/bas_ammo/gamedata/configs/parts/parts_ammo_bas.ltx
+++ b/ammo maker/bas_ammo/gamedata/configs/parts/parts_ammo_bas.ltx
@@ -1,4 +1,4 @@
-[part_defaults_bas]
+[part_defaults_bas]:salvage_high
 degrade = 0.001
 parts = casing_p,1,powder_1,1,bullet_pistol,1
 [ammo_338_federal]:part_defaults_bas
