--- a/README
+++ b/README
@@ -2,24 +2,28 @@ Compilation of small addons I used as a testbed to develop new techniques for cr
 
 These are mostly conflict-free - streamlined upgrades has some conflicts with fetch_list and upgrades and will interfere with any addons that modify quests or tasks.
 
-AMMO MAKER:
+## AMMO MAKER
 
 Balanced ammo crafting. Get a proportionate and infuriatingly small amount of components from each box of ammo. Ammo crafting is streamlined into four overarching types.
 
-STREAMLINED UPGRADES:
+## STREAMLINED UPGRADES
 
 Removes the bloat from upgrade kits and streamlines everything into six types (3 for outfit, 3 for weapon)
 
-REMOTE IED:
+## REMOTE IED
 
 Allows you to upgrade IEDs with remote triggers and detonate them remotely, as well as disarming any planted bombs for recovery.
 
-OUTFIT CHANCE TO DROP:
+## OUTFIT CHANCE TO DROP
 
 The beloved balanced drops addon, now part of the family. Customizable drop chances for outfits and helmets.
 
-ITEM SAVES:
+## ITEM SAVES
 
 Adds items to save your game, earned by completing tasks and through crafting.
+
+## TOOLKIT WORKSHOP
+
+Enables the craft (and only the craft) menu from toolkits.
 
 All RUS translations courtesy of Aonestr
