--- a/streamlined_upgrades/README
+++ b/streamlined_upgrades/README
@@ -1,21 +1,28 @@
+# Streamlined kits
+
 Streamlines the upgrade system by replacing all kits with generic versions.
 
 Tired of needing to collect a bajillion upgrade kits that bloat your inventory? Not enjoying figuring out how to determine if Advanced Bootstrapping kit installs the artifact container or the sprint speed on your suit? This is the addon for you!
 
-Streamlined kits
 
 All weapon and outfit upgrade kits are now compressed into six types, three for weapons, three for outfits:
 
-Outfits:
+# NOTE
 
-Suit Armor Upgrade Kit
+The old kits will not be usable. Conversion is required into the new kits.
+
+This also implicitly makes upgrade salvage less cost-effective.
+
+## Outfits
+
+### Suit Armor Upgrade Kit
 Replaces:
 - Reinforced ballistic inserts (Armor)
 - Durable plates and fabrics (Durability)
 - Compensating armour layers (Rupture)
 - Lightweight Materials (Weight reduction)
 
-Suit Environmental Protection Upgrade Kit
+### Suit Environmental Protection Upgrade Kit
 Replaces:
 - Chemical fire retardants and inserts (Chem res.)
 - Flame-retardant fabrics and inserts (Fire res.)
@@ -23,7 +30,8 @@ Replaces:
 - Protective coated layers of fabrics (Psi res)
 - Active filters and radiation shielding materials (Radiation res)
 
-Suit Utility upgrade kit
+### Suit Utility upgrade kit
+
 Replaces:
 - Fastening system for load distribution (Carryweight)
 - Fastening for attachments (Artifact slots)
@@ -32,9 +40,9 @@ Replaces:
 - Prototype of life support system (Health restoration)
 - Prototype of wound healing system (Bleed restoration)
 
-Weapons:
+## Weapons
 
-Weapon mechanism upgrade kit
+### Weapon mechanism upgrade kit
 Replaces:
 - Automatic gas regulators (Reliability)
 - Additional gas pistons (Recoil reduction)
@@ -42,29 +50,22 @@ Replaces:
 - Calibre components set (Ammo type)
 - Trigger mechanism set (Fire modes)
 
-Weapon body ugprade kit
+### Weapon body ugprade kit
 Replaces:
 - Mobile counter-weight components (Weight)
 - Barrel Additional threaded canals (Flatness)
 - Balancing elements (Accuracy)
 - Ergonomic receivers with different shapes (Handling)
+
+### Weapon attachment upgrade kit
+Replaces:
+- Optical scopes mounting set (Scope upgrades)
 - Barrel external threading components (Suppressor compat)
 - Underbarrel grenade launcher mounts (GL Compat)
 - Optical mount set (Scope compat)
 
-Weapon optical upgrade kit
-Replaces:
-- Optical scopes mounting set (Scope upgrades)
+# Acquisition
 
-All basic kits have crafting recipes. The crafting recipes try to make the most of junk, so hang onto your scrap metal!
+Combine any three kits of the same tier into one of the new one, Just right click and combine away.
 
 Higher tier kits (Advanced/Fine tuning) can be obtained by combining three of the previous tier. This can be done in inventory. Additionally, any higher tier kit can be downgraded into the next tier, but this is a 1:1 replacement.
-
-Kit drops
-These new kits spawn wherever the old ones spawn, randomly replacing them with a percentage chance. This chance can be tweaked in the MCM menu.
-Please note that the replacement is not perfect. You may occasionally see upgrade kits blink out of existence.
-
-Compatibility:
-Modifies:
-- gamedata\configs\items\settings\fetch_list.ltx - removes old kits and replaces with new ones for fetch quest
-- gamedata\configs\items\items\items_upgrades.ltx - adds binder entry to do auto replacement
