reduced kit scaling for suupgrades

--- a/streamlined_upgrades/gamedata/configs/items/settings/upgrade_mapping.ltx
+++ b/streamlined_upgrades/gamedata/configs/items/settings/upgrade_mapping.ltx
@@ -1,41 +1,58 @@
 [upgr_physical_1]
 kit = upgr_o_1_physical
+amt = 1
 [upgr_physical_2]
 kit = upgr_o_2_physical
+amt = 2
 [upgr_physical_3]
 kit = upgr_o_3_physical
+amt = 3
 [upgr_magical_1]
 kit = upgr_o_1_magical
+amt = 1
 [upgr_magical_2]
 kit = upgr_o_2_magical
+amt = 2
 [upgr_magical_3]
 kit = upgr_o_3_magical
+amt = 3
 [upgr_utility_1]
 kit = upgr_o_1_utility
+amt = 1
 [upgr_utility_2]
 kit = upgr_o_2_utility
+amt = 2
 [upgr_utility_3]
 kit = upgr_o_3_utility
+amt = 3
 
 [upgr_internal_1]
 kit = upgr_w_1_internal
+amt = 1
 [upgr_internal_2]
 kit = upgr_w_2_internal
+amt = 2
 [upgr_internal_3]
 kit = upgr_w_3_internal
+amt = 3
 [upgr_external_1]
 kit = upgr_w_1_external
+amt = 1
 [upgr_external_2]
 kit = upgr_w_2_external
+amt = 2
 [upgr_external_3]
 kit = upgr_w_3_external
+amt = 3
 [upgr_optical_1]
 kit = upgr_w_1_optical
+amt = 1
 [upgr_optical_2]
 kit = upgr_w_2_optical
+amt = 2
 [upgr_optical_3]
 kit = upgr_w_3_optical
-
+amt = 3
 
 [upgr_o_1_armor]:upgr_physical_1
 [upgr_o_1_damage]:upgr_physical_1
